# homing

./: .env.example  .gitignore  BOOTSTRAP.md  CLAUDE.md  CONTRIBUTING.md  INTENT.md  LICENSE  README.md  SECURITY.md  bootstrap.sh  pyproject.toml  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: content_classes.yaml
scripts/: bundle.sh  pack-browsers.sh  pack-personal.sh
skills/migrate/: SKILL.md
src/cabinet/: __init__.py  classifier.py  cli.py  enumerate.py  homogeneity.py  planner.py  platform.py  reconcile.py  sampler.py  triage.py  undo.py  worklist.py
src/cabinet/rules/: __init__.py  base.py  by_exif.py  by_extension.py  by_filename_pattern.py  by_hash_dedup.py
src/homing/: __init__.py  audit.py  cli.py  draft.py  draft_cli.py  enumerate.py  index.py  orchestrator.py  platform.py  summary.py  validate.py  worklist.py
src/homing/rules/: __init__.py  base.py  is_git_project.py  is_node_project.py  is_python_project.py
tests/: test_cli.py  test_draft.py  test_enumerate.py  test_index.py  test_orchestrator.py  test_rules.py  test_summary.py  test_validate.py  test_worklist.py
tests/cabinet/: conftest.py  test_chaos_dont_lose.py  test_classifier.py  test_enumerate.py  test_homogeneity.py  test_planner.py  test_reconcile.py  test_rules.py  test_sampler.py  test_triage.py  test_undo.py  test_worklist.py
